Fixed bugs and errors